# AlgoritmikaOffline

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py
app/routers/: __init__.py  content.py
app/schemas/: content.py
app/schemas/json/: manifest.schema.json  task.schema.json  task_folder.schema.json
app/services/: content.py
docs/: architecture.md
tests/: test_content_import.py
