[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algoritmika-offline"
version = "0.1.0"
description = "Offline-first learning platform local API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<0.30",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "jsonschema>=4.21,<5.0",
    "python-multipart>=0.0.9,<0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9.0",
    "httpx>=0.26,<0.27"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
